Update current to Oct. 8 2024

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-#background_opacity 0.9
+background_opacity 0.85
 foreground         #d2d7d7
 background         #333333
 cursor             #d2d7d7
